Tweaks for new flight.sh

--- a/TM/Experiment.config
+++ b/TM/Experiment.config
@@ -1,8 +1,10 @@
 Experiment=HFEMS
 HomeDir=/home/hfems
-#FlightNode=hfems
-SCRIPT_OVERRIDE=$HomeDir/script
+FlightNode=ems-main
+SCRIPT_OVERRIDE=script
+EXP_NODES="ems-main"
 RunLog=saverun.log
+LOOP_ON_FILE=saverun.log
 RunType=raw/data
 Dircksum=yes
 Extractions="HFEMSallext "
