adding the rc.local configuration file to repository

--- a/TM/Experiment.config
+++ b/TM/Experiment.config
@@ -7,4 +7,5 @@ RunLog=saverun.log
 LOOP_ON_FILE=saverun.log
 RunType=raw/data
 Dircksum=yes
+Analysis=`ntpq -p > ntp.log`
 Extractions="HFEMSallext "
