Algo changes to test spare channels

--- a/TM/Experiment.config
+++ b/TM/Experiment.config
@@ -5,6 +5,7 @@ SCRIPT_OVERRIDE=script
 EXP_NODES="ems-main"
 RunLog=saverun.log
 LOOP_ON_FILE=saverun.log
+RESTART_FILE=restart.txt
 RunType=raw/data
 Dircksum=yes
 Analysis=`ntpq -p > ntp.log`
