Added SUBBUSD and LogFiles

--- a/TM/Experiment.config
+++ b/TM/Experiment.config
@@ -1,11 +1,13 @@
 Experiment=HFEMS
 HomeDir=/home/hfems
 FlightNode=ems-main
+SUBBUSD='sc104 -i7'
 SCRIPT_OVERRIDE=script
 EXP_NODES="ems-main"
 RunLog=saverun.log
 LOOP_ON_FILE=saverun.log
 RESTART_FILE=restart.txt
+LogFiles="*.log /home/flight/flight.sh.log"
 RunType=raw/data
 Dircksum=yes
 Analysis=`ntpq -p > ntp.log`
